--- a/GW2Tools/pom.xml
+++ b/GW2Tools/pom.xml
@@ -23,6 +23,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+
 		<!-- https://github.com/xhsun/gw2wrapper -->
 		<dependency>
 			<groupId>me.xhsun.gw2wrapper</groupId>
