--- a/GW2Tools/pom.xml
+++ b/GW2Tools/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>de.rohm-io.gw2</groupId>
 	<artifactId>tools</artifactId>
-	<version>0.2.4.0-SNAPSHOT</version>
+	<version>0.2.4.1</version>
 	<packaging>jar</packaging>
 
 	<name>GW2 Tools</name>
